syntax = "proto3";
package calculator;

option java_package = "com.vmelnyk.grpc.tutorial.calculator.func";
option java_multiple_files = true;

message AvgRequest{
  int32 number = 1;
}

message AvgResponse{
  double avg = 1;
}